tests/NormalTests/paczka1/fuzzy1/26431039.err
Error in line 8: dCqVRx A102 37Z4
Error in line 4: dCqVRx S466 31,7
Error in line 18: DUsT S632 86,8
Error in line 34: lt1wN S632 65,4
Error in line 35: lt1wN A102 61,1
